--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -21,7 +21,7 @@
             class="bg-card w-full max-w-360 overflow-hidden border-b sm:m-8 sm:mb-0 sm:rounded-t-xl sm:py-3 sm:shadow-2xl md:mx-8 md:mt-12 md:pb-3 md:pt-4">
             <div class="relative flex h-16 flex-0 flex-auto items-center justify-center px-4 md:px-6">
                 <!-- @if (!isScreenSmall) { -->
-                <img class="w-56 h-15 p-1" src="assets/images/logos/trotapie.png" alt="Logo Trotapie" />
+                <img class="w-56 h-15 p-1" src="assets/images/logos/trotapie.png" alt="Logo Trotapie" (click)="regresarInicio()" />
             </div>
             <!-- Bottom bar -->
         </div>
