--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -12,19 +12,43 @@
                         <form [formGroup]="hotelesForm" class="w-full max-w-4xl">
 
                             <div class="w-full">
-                                <div class="flex flex-wrap justify-center gap-2 sm:gap-4 pb-2">
-                                    <label *ngFor="let destino of destinos" class="cursor-pointer">
-                                        <input type="radio" [id]="'destino-' + destino.id" [value]="destino.id"
-                                            formControlName="hotelSeleccionado" class="sr-only peer" />
-                                        <div class="px-4 py-2 text-md font-medium border-b-2 border-transparent transition duration-200"
-                                            [ngClass]="{
-                                              'text-gray-600 hover:text-[#1B6F56] peer-checked:text-[#1B6F56] peer-checked:border-[#1B6F56]': tipoDestino === 1,
-                                              'text-gray-600 hover:text-[#F9B44B] peer-checked:text-[#F9B44B] peer-checked:border-[#F9B44B]': tipoDestino === 2
-                                            }">
-                                            {{ destino.nombre }}
+                                <div class="flex justify-center pb-2">
+                                    <div class="relative w-full max-w-xs sm:max-w-sm">
+                                        <!-- <span *ngIf="tipoDestino === 2" class="flex justify-center items-center gap-2 text-center pb-2"><b>Continente:</b>
+                                            {{destinoSelected.continente.nombre}}</span> -->
+                                        <div class="w-full px-5 py-2.5 rounded-full border-2
+             text-sm md:text-base font-semibold text-left
+             cursor-pointer transition duration-200 flex items-center" [ngClass]="{
+        'border-[#1B6F56] text-[#1B6F56]': tipoDestino === 1,
+        'border-[#F9B44B] text-[#F9B44B]': tipoDestino === 2
+      }">
+                                            <mat-select *ngIf="tipoDestino === 1" formControlName="hotelSeleccionado"
+                                                class="pill-mat-select w-full" [panelClass]="'panel-nacionales'"
+                                                disableRipple>
+                                                <mat-option [value]="null" disabled>Selecciona un destino</mat-option>
+                                                <mat-option *ngFor="let destino of destinos" [value]="destino.id">
+                                                    {{ destino.nombre }}
+                                                </mat-option>
+                                            </mat-select>
+
+                                            <mat-select *ngIf="tipoDestino === 2" formControlName="hotelSeleccionado"
+                                                class="pill-mat-select w-full" [panelClass]="'panel-internacionales'"
+                                                disableRipple>
+                                                <mat-option [value]="null" disabled>Selecciona un destino</mat-option>
+
+                                                <mat-optgroup *ngFor="let grupo of agrupadosDestinos"
+                                                    [label]="grupo.nombrePadre">
+                                                    <mat-option *ngFor="let destino of grupo.destinos"
+                                                        [value]="destino.id">
+                                                        {{ destino.nombre }}
+                                                    </mat-option>
+                                                </mat-optgroup>
+                                            </mat-select>
                                         </div>
-                                    </label>
+                                    </div>
                                 </div>
+
+
                             </div>
 
                             <div class="flex justify-center ">
@@ -58,8 +82,27 @@
 
                         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6">
                             <div *ngIf="hotelesPorCiudad.length === 0 && ciudadSeleccionada"
-                                class="text-center text-red-500/80 text-lg mt-8 justify-center">
-                                No hay hoteles disponibles para esta ciudad.
+                                class="mt-12 flex flex-col items-center justify-center text-center animate-fadeIn">
+
+                                <div class="flex flex-col items-center justify-center bg-red-100/20 border border-red-400/40 
+           rounded-2xl p-6 max-w-md shadow-lg backdrop-blur-sm">
+
+                                    <div
+                                        class="w-16 h-16 flex items-center justify-center rounded-full bg-red-500/20 mb-4">
+                                        <mat-icon class="text-red-500 text-4xl">hotel</mat-icon>
+                                    </div>
+
+                                    <h3 class="text-xl font-semibold text-red-500 mb-2">
+                                        No hay hoteles disponibles
+                                    </h3>
+
+                                    <p class="text-base text-gray-400">
+                                        Actualmente no encontramos hoteles.
+                                        <br>
+                                        Intenta seleccionar otra ciudad o vuelve más tarde.
+                                    </p>
+
+                                </div>
                             </div>
                             <div *ngFor="let hotel of hotelesPorCiudad">
 
@@ -72,7 +115,7 @@
                                     <div *ngIf="hotel?.descuento" class="absolute top-2 right-2 z-20">
                                         <div [ngClass]="getDescuentoClass(hotel)" class="text-xs font-bold px-2 py-1">
                                             <div class="flex items-center">
-                                                <span *ngIf="hotel.descuentoSeguro" class="mr-2 inline-flex items-center justify-center
+                                                <span *ngIf="hotel.descuentoSeguro" class="mr-1 inline-flex items-center justify-center
              w-4 h-4
              [&>svg]:w-4 [&>svg]:h-4 [&>svg]:align-middle" [innerHTML]="hotel.descuentoSeguro">
                                                 </span>
@@ -88,7 +131,7 @@
                                                     [innerHTML]="hotel.conceptoIconoSeguro"></span>
                                                 <img class="w-6 h-6 mr-2"
                                                     *ngIf="hotel?.concepto?.descripcion === 'Solo Adultos'"
-                                                    src="assets/icons/solo adultos.png" />
+                                                    src="assets/icons/adultos.svg" />
                                             </div>
                                         </div>
                                     </div>
@@ -136,12 +179,30 @@
                         </div>
                     </div>
                 </div>
-                <div *ngIf="tipoDestino === 2" class="flex min-w-0 flex-auto flex-col ">
+                <div *ngIf="tipoDestino === 2" class="flex min-w-0 flex-auto flex-col mt-2">
                     <div class="flex-auto px-3 sm:p-5">
 
                         <div *ngIf="gruposDestinos.length === 0 && ciudadSeleccionada"
-                            class="text-center text-red-500/80 text-lg mt-8 justify-center">
-                            No hay hoteles disponibles para esta ciudad.
+                            class="mt-12 flex flex-col items-center justify-center text-center animate-fadeIn">
+
+                            <div class="flex flex-col items-center justify-center bg-red-100/20 border border-red-400/40 
+           rounded-2xl p-6 max-w-md shadow-lg backdrop-blur-sm">
+
+                                <div class="w-16 h-16 flex items-center justify-center rounded-full bg-red-500/20 mb-4">
+                                    <mat-icon class="text-red-500 text-4xl">hotel</mat-icon>
+                                </div>
+
+                                <h3 class="text-xl font-semibold text-red-500 mb-2">
+                                    No hay hoteles disponibles
+                                </h3>
+
+                                <p class="text-base text-gray-400">
+                                    Actualmente no encontramos hoteles.
+                                    <br>
+                                    Intenta seleccionar otra ciudad o vuelve más tarde.
+                                </p>
+
+                            </div>
                         </div>
 
                         <div *ngFor="let grupo of gruposDestinos" class="mb-2">
@@ -160,28 +221,29 @@
                                         <div class="absolute inset-0 bg-black/40 z-0"></div>
 
                                         <div *ngIf="hotel?.descuento" class="absolute top-2 right-2 z-20">
-                                            <div [ngClass]="getDescuentoClass(hotel)" class="text-xs font-bold px-2 py-1">
-                                            <div class="flex items-center">
-                                                <span *ngIf="hotel.descuentoSeguro" class="mr-2 inline-flex items-center justify-center
+                                            <div [ngClass]="getDescuentoClass(hotel)"
+                                                class="text-xs font-bold px-2 py-1">
+                                                <div class="flex items-center">
+                                                    <span *ngIf="hotel.descuentoSeguro" class="mr-2 inline-flex items-center justify-center
              w-4 h-4
              [&>svg]:w-4 [&>svg]:h-4 [&>svg]:align-middle" [innerHTML]="hotel.descuentoSeguro">
-                                                </span>
+                                                    </span>
 
-                                                {{ hotel?.descuento.tipo_descuento }}
+                                                    {{ hotel?.descuento.tipo_descuento }}
+                                                </div>
                                             </div>
-                                        </div>
                                         </div>
 
                                         <div *ngIf="hotel?.concepto" class="absolute top-2 left-2 z-20">
                                             <div class="text-xs font-bold px-2 py-1">
-                                            <div class="flex items-center">
-                                                <span *ngIf="hotel?.concepto?.descripcion !== 'Solo Adultos'"
-                                                    [innerHTML]="hotel.conceptoIconoSeguro"></span>
-                                                <img class="w-6 h-6 mr-2"
-                                                    *ngIf="hotel?.concepto?.descripcion === 'Solo Adultos'"
-                                                    src="assets/icons/solo adultos.png" />
+                                                <div class="flex items-center">
+                                                    <span *ngIf="hotel?.concepto?.descripcion !== 'Solo Adultos'"
+                                                        [innerHTML]="hotel.conceptoIconoSeguro"></span>
+                                                    <img class="w-6 h-6 mr-2"
+                                                        *ngIf="hotel?.concepto?.descripcion === 'Solo Adultos'"
+                                                        src="assets/icons/adultos.svg" />
+                                                </div>
                                             </div>
-                                        </div>
                                         </div>
 
                                         <div class="relative z-10 m-8 mb-4">
@@ -236,44 +298,85 @@
     </div>
 
     <div *ngIf="!mostrarInfo" class="h-full flex items-center justify-center">
-        <div class="flex min-w-0 flex-auto flex-col mt-2">
-            <div class="flex-auto p-3 sm:p-5">
-                <div class="flex items-center justify-center h-[70vh] w-full relative overflow-hidden">
+        <div class="flex min-w-0 flex-auto flex-col mt-2 items-center justify-center">
+            <div class="flex justify-center items-center p-3 sm:p-5 w-full">
+                <fuse-card class="flex flex-col max-w-xl w-full md:w-[600px]" [flippable]="true" #heroCard>
 
-                    <fuse-card
-                        class="relative flex flex-col items-center justify-center w-full max-w-5xl h-[70vh] text-white bg-cover bg-center rounded-3xl overflow-hidden shadow-lg transition duration-500 ease-in-out card-animada"
-                        [ngStyle]="{ 'background-image': currentImage ? 'url(' + currentImage + ')' : 'none' }">
+                    <ng-container fuseCardFront>
+                        <div class="relative w-full h-[70vh] rounded-3xl overflow-hidden shadow-lg
+             flex items-center justify-center text-white bg-cover bg-center"
+                            [ngStyle]="{ 'background-image': currentImage ? 'url(' + currentImage + ')' : 'none' }">
 
-                        <div *ngIf="overlayImage"
-                            class="absolute inset-0 bg-cover bg-center transition-opacity duration-500"
-                            [ngStyle]="{ 'background-image': 'url(' + overlayImage + ')' }"
-                            [class.opacity-0]="!isTransitioning" [class.opacity-100]="isTransitioning">
+                            <div *ngIf="overlayImage"
+                                class="absolute inset-0 bg-cover bg-center transition-opacity duration-500"
+                                [ngStyle]="{ 'background-image': 'url(' + overlayImage + ')' }"
+                                [class.opacity-0]="!isTransitioning" [class.opacity-100]="isTransitioning">
+                            </div>
+
+                            <div class="absolute inset-0 bg-black/50 z-0"></div>
+
+                            <div class="relative z-10 flex flex-col items-center text-center px-6 space-y-2">
+                                <span class="text-3xl md:text-4xl font-bold">
+                                    ¡Encuentra el viaje
+                                </span>
+                                <span class="text-3xl md:text-4xl font-bold">
+                                    perfecto para ti!
+                                </span>
+                            </div>
+
+                            <div class="absolute bottom-10 transform flex flex-col sm:flex-row gap-4 z-20">
+                                <button
+                                    class="px-8 py-3 bg-green-700 text-white text-lg font-semibold rounded-full shadow-md hover:bg-green-800 transition"
+                                    (click)="heroCard.face = 'back'; cargarDestinos(1)">
+                                    Destinos Nacionales
+                                </button>
+
+                                <button
+                                    class="px-8 py-3 bg-[#F9B44B] text-white text-lg font-semibold rounded-full shadow-md hover:bg-[#e0a13a] transition"
+                                    (click)="heroCard.face = 'back' ; cargarDestinos(2)">
+                                    Destinos Internacionales
+                                </button>
+                            </div>
+
                         </div>
+                    </ng-container>
 
-                        <div class="absolute inset-0 bg-black/50 z-0"></div>
-
-                        <div class="relative z-10 flex flex-col items-center justify-center text-center px-6 space-y-2">
-                            <span class="text-3xl sm:text-4xl font-bold">¡Encuentra el viaje</span>
-                            <span class="text-3xl sm:text-4xl font-bold">perfecto para ti!</span>
-                        </div>
-
-                        <div class="absolute bottom-10 transform flex flex-col sm:flex-row gap-4 z-20">
-                            <button
-                                class="px-8 py-3 bg-green-700 text-white text-lg font-semibold rounded-full shadow-md hover:bg-green-800 transition"
-                                (click)="cargarDestinos(1)">
-                                Destinos Nacionales
+                    <ng-container fuseCardBack>
+                        <div class="relative w-full h-[70vh] rounded-3xl overflow-hidden shadow-lg
+           bg-[#0B0B2B] flex flex-col justify-center items-center px-8 py-10 text-white">
+                            <button mat-icon-button
+                                class="absolute top-4 left-4 bg-white/10 hover:bg-white/20 rounded-full transition"
+                                (click)="heroCard.face = 'front'">
+                                <mat-icon class="text-white">arrow_back</mat-icon>
                             </button>
 
-                            <button
-                                class="px-8 py-3 bg-[#F9B44B] text-white text-lg font-semibold rounded-full shadow-md hover:bg-[#e0a13a] transition"
-                                (click)="cargarDestinos(2)">
-                                Destinos Internacionales
-                            </button>
+                            <div class="w-full text-center">
+                                <h2 class="text-3xl font-bold mb-4 tracking-tight">
+                                    {{ tipoDestino === 1 ? 'Explora por Ciudad' : 'Explora por Continente' }}
+                                </h2>
+
+                                <p class="text-md text-gray-300 mb-6">
+                                    {{
+                                    tipoDestino === 1
+                                    ? 'Elige una ciudad de México y descubre experiencias únicas dentro del país.'
+                                    : 'Selecciona un continente para explorar los mejores destinos internacionales.'
+                                    }}
+                                </p>
+
+                                <div class="flex flex-col gap-4 max-h-[300px] overflow-y-auto px-1 custom-scrollbar">
+                                    <button *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
+                                        class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md 
+           text-lg font-semibold tracking-wide backdrop-blur-sm transition 
+           flex items-center justify-between px-5 group" (click)="cargaInfo(item)">
+                                        <span class="italic group-hover:not-italic">
+                                            {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
+                                        </span>
+                                    </button>
+                                </div>
+                            </div>
                         </div>
-
-                    </fuse-card>
-
-                </div>
+                    </ng-container>
+                </fuse-card>
             </div>
         </div>
     </div>
