--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -345,7 +345,7 @@
                         <div class="relative w-full h-[70vh] rounded-3xl overflow-hidden shadow-lg
            bg-[#0B0B2B] flex flex-col justify-center items-center px-8 py-10 text-white">
                             <button mat-icon-button
-                                class="absolute top-4 left-4 bg-white/10 hover:bg-white/20 rounded-full transition"
+                                class="absolute top-4 left-4 z-50 pointer-events-auto bg-white/10 hover:bg-white/20 rounded-full transition"
                                 (click)="heroCard.face = 'front'">
                                 <mat-icon class="text-white">arrow_back</mat-icon>
                             </button>
